20250315-fix: add card-limit, soft delete, and fix tests